tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__Havingtroublefin-ZW-P5BllSP25hEBQTgEBQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1829949076368589121,
  "prerequisites": [
    3221
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Why not exchange a few coins to save yourself the time of combing the Twilight forest for Shimmering mushrooms.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Having trouble finding Botania mushrooms?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 24000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3221
  ],
  "rewards": [],
  "tasks": []
}
