tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__HornoftheHunt-AAAAAAAAAAAAAAAAAAAJWA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2392,
  "prerequisites": [
    333
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Did you goof and somehow lose the Horned Huntsman before you could kill him? Well... You can summon him again using the hard way, or pay coins to get another horn.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Horn of the Hunt",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 48000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    333
  ],
  "rewards": [],
  "tasks": []
}
